--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,9 +96,9 @@ dependencies {
     implementation "com.google.dagger:dagger:$daggerVer"
     implementation "com.google.dagger:dagger-android-support:$daggerVer"
     compileOnly 'javax.annotation:jsr250-api:1.0'
-    implementation 'com.google.dagger:dagger-grpc-server-annotations:2.17'
-    implementation 'com.google.dagger:dagger-android-support-jarimpl:2.17'
-    implementation 'com.google.dagger:dagger-parent:2.9'
+//    implementation 'com.google.dagger:dagger-grpc-server-annotations:2.17'
+//    implementation 'com.google.dagger:dagger-android-support-jarimpl:2.17'
+//    implementation 'com.google.dagger:dagger-parent:2.9'
 
     // Network
     implementation "com.squareup.okhttp3:okhttp:${okhttpVersion}"
