--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.udacity.movie.udacity_movies"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -48,7 +48,6 @@ android {
     }
 }
 ext {
-    daggerVersion = '2.16'
     okhttpVersion = '3.9.0'
     espressoVersion = '3.0.1'
     supportLibVersion = '28.0.0'
@@ -58,13 +57,14 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     //support
-    implementation "com.android.support:appcompat-v7:${supportLibVersion}"
     implementation "com.android.support:design:${supportLibVersion}"
     implementation "com.android.support:support-v4:${supportLibVersion}"
     implementation "com.android.support:support-annotations:${supportLibVersion}"
     implementation "com.android.support:palette-v7:${supportLibVersion}"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation "com.android.support:recyclerview-v7:${supportLibVersion}"
     implementation "com.android.support.test.espresso:espresso-idling-resource:${espressoVersion}"
+
+    //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     // Rx
@@ -79,22 +79,14 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.3.0'
 
-    // Dependency Injection
-
-    //    implementation "com.google.dagger:dagger-android:${daggerVersion}"
-
-    //    implementation "com.google.dagger:dagger-android-support:${daggerVersion}" // if you use the support libraries
-
-    //    annotationProcessor "com.google.dagger:dagger-android-processor:${daggerVersion}"
-
-    //    annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
     def daggerVer = 2.17
 
     // or latest version
-    annotationProcessor "com.google.dagger:dagger-android-processor:$daggerVer"
-    annotationProcessor "com.google.dagger:dagger-compiler:$daggerVer"
-    implementation "com.google.dagger:dagger:$daggerVer"
+    implementation "com.google.dagger:dagger-android:$daggerVer"
     implementation "com.google.dagger:dagger-android-support:$daggerVer"
+    annotationProcessor "com.google.dagger:dagger-compiler:$daggerVer"
+    annotationProcessor "com.google.dagger:dagger-android-processor:$daggerVer"
+
     compileOnly 'javax.annotation:jsr250-api:1.0'
 //    implementation 'com.google.dagger:dagger-grpc-server-annotations:2.17'
 //    implementation 'com.google.dagger:dagger-android-support-jarimpl:2.17'
